Bug 163337 - Trash icon is not updated when emptied
Summary: Trash icon is not updated when emptied
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: general (other bugs)
Version First Reported In: 16.12.2
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Peter Penz
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-06-06 08:50 UTC by Georg Wittenburg
Modified: 2020-08-05 17:33 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Georg Wittenburg 2008-06-06 08:50:39 UTC
Version:           4.1 Beta 1 (using Devel)
Installed from:    Compiled sources

After selecting "Empty Trash" from the RMB menu of the Trash icon in the Dolphin sidebar and affirming in the confirmation dialog, the Trash icon still shows a full Trash can. In fact, when I go to the trash folder, there are still icons of the items I have just deleted. Pressing F5 updates both the folder content and the icon. Maybe a call to some update()-function is missing after the confirmation dialog?
Comment 1 Peter Penz 2008-06-07 12:22:04 UTC
SVN commit 817981 by ppenz:

inform observers if the trash has been emptied, so that e. g. an icon update can be done or the trash directory is refreshed

BUG: 163337
CCBUG: 159366

CCMAIL: ervin@kde.org

 M  +14 -1     kfileplacesview.cpp  
 M  +1 -0      kfileplacesview.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=817981
Comment 2 Georg Wittenburg 2008-06-07 12:31:32 UTC
Thanks! :)
Comment 3 Jay LaCroix 2008-07-17 01:20:36 UTC
I am using KDE 4.1 RC1 and I still have this problem. I have the Trash plasmoid on my desktop, and when I rightclick it to empty the trash, the icon doesn't change. In fact, I just emptied the trash (I had 7 items to delete) and on my desktop it still says "Trash 7 items". If I click on it and open Trash in Dolphin, it shows my files are deleted after I press F5 but the desktop icon and kicker icon both show the trash is full until my next login.
Comment 4 Peter Penz 2008-07-17 07:45:55 UTC
@Jeremy: The desktop and the trash plasmoid is in the responsibility of Plasma. Within Dolphin I could only fix the Dolphin related part and like Dolphin those Plasma components also have to take care listening to a changed trash content. It would be great if you could open a separate bug-report for Plasma. In this case please check whether such a bug has already been reported. Thanks!