inform observers if the trash has been emptied, so that e. g. an icon update can be done or the trash directory is refreshed

BUG: 163337
CCBUG: 159366

CCMAIL: ervin@kde.org

svn path=/trunk/KDE/kdelibs/; revision=817981