kfile/kfileplacesview.h
@@ -90,6 +90,7 @@ private:
     Q_PRIVATE_SLOT(d, void _k_itemAppearUpdate(qreal))
     Q_PRIVATE_SLOT(d, void _k_itemDisappearUpdate(qreal))
     Q_PRIVATE_SLOT(d, void _k_enableSmoothItemResizing())
+    Q_PRIVATE_SLOT(d, void _k_trashUpdated(KJob *))
 
     class Private;
     Private * const d;
